[Fix Swagger Docs]
