# internal/services/api-gateway/handler/auth_handler.go
@@ -35,7 +35,7 @@ func NewAuthHandler(logger *slog.Logger, authClient authpb.AuthServiceClient) *A
 // @Success 201 {object} object{user_id=int64,email=string,first_name=string,last_name=string} "Успешная регистрация"
 // @Failure 400 {object} object{error=string} "Некорректные данные"
 // @Failure 500 {object} object{error=string} "Ошибка сервера"
-// @Router /auth/signup [post]
+// @Router /auth/sign-up [post]
 func (h *AuthHandler) SignUp(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(c.Request.Context(), 5*time.Second)
 	defer cancel()
@@ -73,7 +73,7 @@ func (h *AuthHandler) SignUp(c *gin.Context) {
 // @Failure 400 {object} object{error=string} "Некорректные данные"
 // @Failure 401 {object} object{error=string} "Неверные учетные данные"
 // @Failure 500 {object} object{error=string} "Ошибка сервера"
-// @Router /auth/signin [post]
+// @Router /auth/sign-in [post]
 func (h *AuthHandler) SignIn(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(c.Request.Context(), 5*time.Second)
 	defer cancel()
